# VisionCubeSolver

./: .gitignore  README.md  build_exe.ps1  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md
src/vision_cube_solver/: __init__.py  __main__.py
src/vision_cube_solver/app/: main_window.py  session.py
src/vision_cube_solver/cube/: __init__.py  enums.py  model.py
src/vision_cube_solver/solver/: __init__.py  coordinates.py  pattern_database.py  two_phase.py
src/vision_cube_solver/vision/: __init__.py  camera.py  classifier.py  sampler.py  types.py
tests/: test_app.py  test_coordinates.py  test_cube_model.py  test_solver_integration.py  test_vision.py
